syntax = "proto3";
package v1;

option go_package = "gen/characters/pb";

// Service to manage characters
service CharactersService {
  rpc CharactersToLoginForAccount(CharactersToLoginForAccountRequest) returns (CharactersToLoginForAccountResponse);
  rpc CharactersToLoginByGUID(CharactersToLoginByGUIDRequest) returns (CharactersToLoginByGUIDResponse);

  rpc AccountDataForAccount(AccountDataForAccountRequest) returns (AccountDataForAccountResponse);

  rpc WhoQuery(WhoQueryRequest) returns (WhoQueryResponse);

  rpc CharacterOnlineByName(CharacterOnlineByNameRequest) returns (CharacterOnlineByNameResponse);
  rpc CharacterByName(CharacterByNameRequest) returns (CharacterByNameResponse);
}

// LogInCharacter is character that should be displayed on log in screen
message LogInCharacter {
  uint64 GUID = 1;
  string name = 2;
  uint32 race = 3;
  uint32 class = 4;
  uint32 gender = 5;
  uint32 skin = 6;
  uint32 face = 7;
  uint32 hairStyle = 8;
  uint32 hairColor = 9;
  uint32 facialStyle = 10;
  uint32 level = 11;
  uint32 zone = 12;
  uint32 map = 13;
  float positionX = 14;
  float positionY = 15;
  float positionZ = 16;
  uint32 guildID = 17;
  uint32 playerFlags = 18;
  uint32 atLogin = 19;
  uint32 petEntry = 20;
  uint32 petModelID = 21;
  uint32 petLevel = 22;
  bool banned = 23;
  repeated EquipmentDisplay equipments = 24;
  uint32 accountID = 25;
}

message EquipmentDisplay {
  uint32 DisplayInfoID = 1;
  uint32 InventoryType = 2;
  uint32 EnchantmentID = 3;
}

message CharactersToLoginForAccountRequest{

  string api = 1;

  uint32 accountID = 2;
  uint32 realmID = 3;
}

// Response that contains list of characters for given account
message CharactersToLoginForAccountResponse{
  string api = 1;

  repeated LogInCharacter characters = 2;
}

message CharactersToLoginByGUIDRequest{
  string api = 1;

  uint64 characterGUID = 2;
  uint32 realmID = 3;
}

// Response that contains character to login
message CharactersToLoginByGUIDResponse{
  string api = 1;

  LogInCharacter character = 2;
}


message AccountDataForAccountRequest{
  string api = 1;

  uint32 accountID = 2;
  uint32 realmID = 3;
}

message AccountData {
  uint32 type = 1;
  int64 time = 2;
  string data = 3;
}

message AccountDataForAccountResponse{
  string api = 1;

  repeated AccountData accountData = 2;
}

message WhoQueryRequest{
  string api = 1;

  uint64 characterGUID = 2;
  uint32 realmID = 3;
  uint32 lvlMin = 4;
  uint32 lvlMax = 5;

  string playerName = 6;
  string guildName = 7;

  uint32 raceMask = 8;
  uint32 classMask = 9;

  repeated uint32 zones = 10;

  repeated string strings = 11;
}

message WhoQueryResponse{
  string api = 1;

  uint32 totalFound = 2;
  message WhoItem {
    uint64 guid = 1;
    string name = 2;
    string guild = 3;
    uint32 lvl = 4;
    uint32 class = 5;
    uint32 race = 6;
    uint32 gender = 7;
    uint32 zoneID = 8;
  };
  repeated WhoItem itemsToDisplay = 3;
}

message CharacterOnlineByNameRequest {
  string api = 1;

  uint32 realmID = 2;
  string characterName = 3;
}

message CharacterOnlineByNameResponse {
  string api = 1;

  message Char {
    uint32 realmID = 1;
    string loadBalancerID = 2;
    uint64 charGUID = 3;
    string charName = 4;
    uint32 charRace = 5;
    uint32 charClass = 6;
    uint32 charGender = 7;
    uint32 charLvl = 8;
    uint32 charZone = 9;
    uint32 charMap = 10;
    uint64 charGuildID = 11;
    uint32 accountID = 12;
  }
  Char character = 2;
}

message CharacterByNameRequest {
  string api = 1;

  uint32 realmID = 2;
  string characterName = 3;
}

message CharacterByNameResponse {
  string api = 1;

  message Char {
    uint32 realmID = 1;
    bool isOnline = 2;
    string loadBalancerID = 3;
    uint64 charGUID = 4;
    string charName = 5;
    uint32 charRace = 6;
    uint32 charClass = 7;
    uint32 charGender = 8;
    uint32 charLvl = 9;
    uint32 charZone = 10;
    uint32 charMap = 11;
    uint64 charGuildID = 12;
    uint32 accountID = 13;
  }
  Char character = 2;
}
